Finished landing page responsiveness and fixed extra white space

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer-container {
   background-color: #1F1F47;
-  padding: 4rem 0 2rem 0;
+  padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,7 +61,7 @@
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   margin: 16px;
   text-align: left;
   width: 160px;
@@ -130,7 +130,6 @@
 .social-logo {
   color: #fff;
   justify-self: start;
-  margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
@@ -164,10 +163,8 @@
   .social-media-wrap {
     flex-direction: column;
   }
-}
 
-@media screen and (max-width: 768px) {
-  .social-logo {
-    margin-left: 0;
+  .footer-link-items {
+    margin: 10px;
   }
 }
