--- a/client/src/components/LandingPage.css
+++ b/client/src/components/LandingPage.css
@@ -3,6 +3,8 @@
   width: 100%;
   height: 313.48px;
   background: url('../images/bluapp.jpg') center/cover no-repeat;
+  background-size: contain;
+  background-color: black;
   mix-blend-mode: normal;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 40px;
@@ -33,15 +35,29 @@
 }
 
 .side-picture {
-  position: absolute;
-  left: 740px;
-  top: 160px;
   width: 350px;
   height: 200px;
+  margin-top: -30px;
+  margin-left: -30px;
   background: url('../images/bluapp2.jpg') center/cover no-repeat;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
   border-radius: 40px;
+  /* transform: matrix(1, 0.16, -0.16, 1, 0, 0) rotateY(-20deg) rotateX(20deg); */
+  mix-blend-mode: normal;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: all 1s ease;
+}
+
+.side-picture-mirror {
+  position: absolute;
+  left: 45%;
+  top: 18%;
+  width: 350px;
+  height: 200px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+  border-radius: 40px;
   transform: matrix(1, 0.16, -0.16, 1, 0, 0) rotateY(-20deg) rotateX(20deg);
+  background: linear-gradient(108.11deg, #D7D7D7 1.46%, #368799 101.12%);
   mix-blend-mode: normal;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   transition: all 1s ease;
