--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -110,7 +110,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
     left: 0;
     opacity: 1;
-    transition: all .5s ease;
+    transition: all 0.5s ease;
     z-index: 1;
   }
 
